--- a/BITACORA 3 - copia/gridindex.html
+++ b/BITACORA 3 - copia/gridindex.html
@@ -34,7 +34,7 @@
     <section>
         <div class="cuadro">
             <div class="foto">
-                <img src="pexels-paras-4218883.jpg" width="95%">
+                <img src="./Grid/pexels-paras-4218883.jpg" width="95%">
             </div>
             <div class="texto">
                 <h2>&#60;¿Cómo funciona CSS Grid?&#62;</h2>
