--- a/BITACORA 3 - copia/gridindex.html
+++ b/BITACORA 3 - copia/gridindex.html
@@ -18,7 +18,7 @@
                    <li><a href="index.html">FrameWorks</a></li>
                     <li><a href="gridindex.html">Grid</a></li>
                     <li><a href="Mobileindex.html">Mobile First</a></li>
-                    <li><a href="calcindex.html">Supports</a></li>
+                    <li><a href="calcindex.html">Calc</a></li>
                     <li><a href="Supportsindex.html">Supports</a></li>
                     <li><a href="UnidadResponsivIndex.html">Unidad Responsiva</a></li>
                 </ul>
